concord_macros/tests/trybuild/fail/codegen/reserved_websocket_arity_one.rs
use concord_macros::api;

api! {
    client ReservedWebSocketArityOneApi {
        base "https://example.com"
    }

    WS Connect
        path ["connect"]
        -> WebSocket<A>
}

fn main() {}
