concord_macros/tests/trybuild/fail/codegen/reserved_websocket_arity_one.stderr
error: reserved endpoint I/O family `WebSocket` expects two or three type arguments
  --> tests/trybuild/fail/codegen/reserved_websocket_arity_one.rs:10:12
   |
10 |         -> WebSocket<A>
   |            ^^^^^^^^^^^^
